objects/CIPIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CIP_SF_Org_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP SF Org URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key_For_Old_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Key For Old Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret_For_Old_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Secret For Old Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_For_Old_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password For Old Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SessionURL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_For_Old_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name For Old Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CIPIntegration</label>
</CustomObject>